Adjusts timer code in main section

--- a/intro.html
+++ b/intro.html
@@ -13,12 +13,12 @@
 
   <section>
     <h1>Introduction</h1>
-    <p>Welcome to my super-simple Sinatra web app. Despite it not being built in just one file, I hope it impresses, nonetheless!</p>
+    <p>Welcome to my super-simple Sinatra web app. Despite it not being built in just one file, I hope it impresses, nonetheless! (Note: it is responsive!)</p>
   </section>
 
   <section>
     <h1>Main</h1>
-      <p id="timer"></p>
+    <div><span id="time">3</span></div>
   </section>
 
   <footer id="footer">Madelene Campos</footer>
