--- a/intro.html
+++ b/intro.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
- <link rel="stylesheet" href="css/style.css" type="text/css">
-</head>
+  <head>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
 
-<body>
+  <body>
+    <div class="flex-container">
+      <header>
+        <h1>Simple Sinatra Web App</h1>
+      </header>
 
-<div class="flex-container">
-  <header>
-    <h1>Simple Sinatra Web App</h1>
-  </header>
+      <section>
+        <h1>Introduction</h1>
+        <p>Welcome to my super-simple Sinatra web app. Despite it not being built in just one file, I hope it impresses, nonetheless! (Note: it is responsive!)</p>
+      </section>
 
-  <section>
-    <h1>Introduction</h1>
-    <p>Welcome to my super-simple Sinatra web app. Despite it not being built in just one file, I hope it impresses, nonetheless! (Note: it is responsive!)</p>
-  </section>
+      <section>
+        <h1>Main</h1>
+          <div id="timer"><div><span id="time">3</span></div></div>
+      </section>
 
-  <section>
-    <h1>Main</h1>
-    <div><span id="time">3</span></div>
-  </section>
-
-  <footer id="footer">Madelene Campos</footer>
-</div>
-  <script type="text/javascript" src="js/main.js"></script>
-</script>
-</body>
+      <footer id="footer">Madelene Campos</footer>
+    </div>
+    <script type="text/javascript" src="js/main.js"></script>
+  </body>
 </html>
